[package]
name = "aolifu-rust"
version = "0.1.0"
edition = "2021"
description = "study rust"
license = "Apache-2.0"
authors = ["Oliver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.dev]
#optimize compile programming
opt-level = 0

[profile.release]
panic = 'abort'
opt-level = 3